@startuml labo2
skinparam ClassAttributeIconSize 0
class Codering{
    -tekst : string
    +Codering(tekst : string)
    +Code() : string
}
note left: component
interface ICodering{
    +{abstract}Code() : string
}
note left: interface

abstract class IDecorator{
    +IDecorator(ouder: ICodering)
    +Code() : string
}
note left: abstracte decorator

class Wissel{
    +Wissel(ouder : ICodering)
    +Code() : string
}
note bottom: concrete decorator
class Cijfer{
    +Cijfer(ouder : ICodering)
    +Code() : string
}
note bottom: concrete decorator
class Blok{
    +Blok(ouder : ICodering)
    +Code() : string
}
note bottom: concrete decorator

ICodering <|.up. Codering : is een
ICodering <|.down. IDecorator : is een
IDecorator <|.. Wissel: is een
IDecorator <|.. Cijfer: is een
IDecorator <|.. Blok: is een

IDecorator o-- ICodering: decoreert


@enduml